samples/_failures_safe/1761512547_9a443d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11d7a3a7.c: In function ‘main’:
./samples/SAFE/__tmp_11d7a3a7.c:148:18: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  148 |         temp_buf[input
      |                  ^~~~~
      |                  int
./samples/SAFE/__tmp_11d7a3a7.c:148:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_11d7a3a7.c:148:23: error: expected ‘]’ at end of input
  148 |         temp_buf[input
      |                       ^
      |                       ]
./samples/SAFE/__tmp_11d7a3a7.c:148:9: error: expected declaration or statement at end of input
  148 |         temp_buf[input
      |         ^~~~~~~~
./samples/SAFE/__tmp_11d7a3a7.c:148:9: error: expected declaration or statement at end of input
